--- a/BaptismInvitation/index.html
+++ b/BaptismInvitation/index.html
@@ -66,6 +66,22 @@
       line-height: 1.4;
     }
 
+    .link-button {
+      background-color: #ff8fab;
+      color: white;
+      padding: 10px 25px;
+      text-decoration: none;
+      border-radius: 8px;
+      font-weight: bold;
+      display: inline-block;
+      margin-top: 15px;
+      transition: 0.3s;
+    }
+
+    .link-button:hover {
+      background-color: #f06292;
+    }
+
     footer {
       margin-top: 20px;
       font-size: 0.85em;
@@ -93,8 +109,8 @@
   <div class="details">
     <p><strong>When:</strong> Sunday, December 8, 2025</p>
     <p><strong>Time:</strong> Baptism at 10:00 AM | Reception at 12:00 PM</p>
-    <p><strong>Where:</strong> St. James Parish Church,</p>
-    <p>followed by lunch at The Aningway eme</p>
+    <p><strong>Where:</strong> St. James Parish Church</p>
+    <p>Followed by lunch at The Aningway eme</p>
   </div>
 
   <p>Please join us as we celebrate this blessed day full of faith, joy, and love.</p>
